vanilla-tab: added more ES6 features

--- a/vanillaTab/template.html
+++ b/vanillaTab/template.html
@@ -60,5 +60,5 @@
 </div>
 
 <!-- Tabs -->
-<script src="vanilla-tab.js"></script>
+<script src="vanilla-tab-es6.js"></script>
 <script src="config.js"></script>
